--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,15 +1,30 @@
 /* nav & footer formatting */
 
-.navbar, .nav, .jumbotron{
-    background-color:rgb(16,31,83);
-    color:rgb(95,168,85);
-    padding: 1px; 
+.jumbotron{
+    padding-bottom: 20%; 
+    height: auto;
+    width: 100%;
+    background-color:rgb(60, 62, 66);
+    overflow: hidden;
 }
+
+
+.navbar, .nav {
+    background-color:rgb(60, 62, 66);
+    color:rgb(152,126,98);
+    height: auto;
+}
+
+.logo{
+    font-family: 'Romanesco', cursive;
+    font-size: 90px;
+}
+
 
 /* breadcrumb formatting */
 .breadcrumb{
-    background-color:rgb(16,31,83);
-    color:rgb(95,168,85);
+    background-color:rgb(60, 62, 66);
+    color:rgb(134, 124, 76);
 }
 
 .breadcrumb a{
@@ -19,7 +34,7 @@
 
 /* document formatting */
 body {
-    background-image: url("./date-night-generator/assets/images/background.jpg");    
+    background-image: url("./images/background.jpg");    
     background-repeat: no-repeat;
     background-size:cover;
     background-attachment: fixed;
@@ -30,8 +45,8 @@ body {
 
 .title 
 {
-    background-color:rgb(16,31,83);
-    color:rgb(95,168,85);
+    background-color:rgb(152,126,98);
+    color:rgb(60, 62, 66);
     margin: 30px;
     width: auto;
     padding: 20px;
@@ -41,8 +56,8 @@ body {
 
 /* content formatting */
 .content{
-    background-color:rgb(16,31,83);
-    color:rgb(95,168,85);
+    background-color:rgb(152,126,98);
+    color:rgb(60, 62, 66);
     margin: 30px;
     width: auto;
     padding: 20px;
@@ -56,13 +71,13 @@ hr{
 
 /* Button formatting */
 .btn-lg{
-    background-color:rgb(16,31,83);
-    color:rgb(95,168,85);
+    background-color:rgb(152,126,98);
+    color:rgb(60, 62, 66);
 }
 
 .btn-lg a{
     text-decoration: none;
-    color:rgb(95,168,85);
+    color:rgb(60, 62, 66);
 }
 
 /* CSS Hover animations */
@@ -85,8 +100,9 @@ hr{
 
   /* map formatting */
   #mapid { 
-        height: 500px; 
-        width: 700px;
+        height: 400px; 
+        width: 600px;
+        margin: 10px;
     }
 
 
@@ -108,3 +124,56 @@ hr{
         font-family: 'Open Sans', sans-serif;
       }
     
+
+
+      @font-face {
+  font-family: Biko;
+  src:url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/4273/biko-black.woff");
+}
+body {
+    background-color:rgb(60, 62, 66);
+  /* margin: 2rem; */
+}
+header { 
+  width: 100%;
+  margin: auto;
+  height: 300px;
+  position: relative;
+  max-width: 1200px;
+  background-color:rgb(60, 62, 66);
+  overflow: hidden;
+}
+header video { width: 100%; }
+
+svg { 
+  width: 100%;
+  position:absolute;
+  top: 0;
+  left: 0; // needed for FF, Safari, Edge
+  height: 100%;
+}
+
+.logo{
+  font-family: Biko, sans-serif;
+  font-weight: 900;
+  text-transform: uppercase;
+  font-size: 30px;
+}
+svg rect {
+  fill: rgb(201, 201, 201);
+}
+svg > rect {
+    -webkit-mask: url(#mask);
+    mask: url(#mask);
+}
+
+mask{
+    border-style: solid;
+    border-color: dimgrey;
+    border-width:10px;
+}
+
+.tag{
+    font-family: 'Roboto Condensed', sans-serif; 
+    font-size: 10px;
+}
