--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,7 @@
     height: auto;
     width: 90%;
     margin: 20px;
-    margin-bottom: 300px;
+    /* margin-bottom: 300px; */
     background-color: rgb(91, 92, 95);
     margin-left: 5%
 }
@@ -43,6 +43,9 @@ a {
 
 .data{
   color: lightgrey;
+  overflow: scroll;
+    height: 300px;
+
 }
 /* title formatting */
 
@@ -66,6 +69,18 @@ a {
     padding: 20px;
     font-family: 'Roboto Condensed', sans-serif;
     border-radius: 5;
+    padding: 50px;
+}
+
+.contentRes {
+    background-color: rgb(152, 126, 98);
+    color: rgb(60, 62, 66);
+    margin: 30px;
+    width: auto;
+    padding: 20px;
+    font-family: 'Roboto Condensed', sans-serif;
+    border-radius: 5;
+    display: none;
 }
 
 hr {
@@ -108,29 +123,14 @@ hr {
 
 /* map formatting */
 
-#mapid {
-    height: 400px;
-    width: 600px;
+#map {
+    height: 300px;
+    width: 100%;
     margin: 10px;
 }
 
-.marker {
-    background-image: url('mapbox-icon.png');
-    background-size: cover;
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    cursor: pointer;
-}
 
-.mapboxgl-popup {
-    max-width: 200px;
-}
 
-.mapboxgl-popup-content {
-    text-align: center;
-    font-family: 'Open Sans', sans-serif;
-}
 
 @font-face {
     font-family: Biko;
